grammar.js
    program: ($) =>
      seq(optional($.shebang_line), repeat($._component)),

    _component: ($) =>
      choice(
        $.preprocessor_macro_definition,
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.embedded_code,
        $.probe_point_definition,
        $.probe_point_alias_prologue,
        $.probe_point_alias_epilogue,
        $.function_definition,
        $.variable_declaration
      ),

    probe_point_definition: ($) =>
      seq(
        "probe",
        field("probe_point", $._probe_point_seq),
        field("body", $.statement_block)
      ),

    _probe_point_seq: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        seqdel(",", $.probe_point)
      ),

    probe_point: ($) =>
      prec.right(
        seq(
          field(
            "component",
            seqdel(
              ".",
              choice(
                $.probe_point_component,
                $.probe_point_expansion
              )
            )
          ),
          optional(
            field("sufficiency_mark", $._sufficiency_mark)
          ),
          optional(field("arming_condition", $._if_clause))
        )
      ),

    probe_point_component: ($) =>
      seq(
        field("pattern", /[*A-Z_a-z][*0-9A-Z_a-z]*/),
        optional(seq("(", field("parameter", $._rvalue), ")"))
      ),

    _sufficiency_mark: (_) => choice("!", "?"),

    function_definition: ($) =>
      seq(
        optional("private"),
        "function",
        choice(
          $.preprocessor_macro_expansion,
          $.conditional_preprocessing,
          seq(
            field("name", $.identifier),
            optional(seq(":", field("return_type", $.type))),
            "(",
            optional(
              choice(
                $.preprocessor_macro_expansion,
                $.conditional_preprocessing,
                field("parameter", seqdel(",", $.parameter))
              )
            ),
            ")",
            optional(seq(":", field("priority", $.literal)))
          )
        ),
        field("body", choice($.embedded_code, $.statement_block))
      ),

    variable_declaration: ($) =>
      prec.right(
        seq(
          choice("private", "global", seq("private", "global")),
          choice(
            $.preprocessor_macro_expansion,
            $.conditional_preprocessing,
            seqdel(",", $._variable_declarator)
          ),
          optional(";")
        )
      ),

    _variable_declarator: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.identifier,
        $.init_declarator,
        $.array_declarator
      ),

    init_declarator: ($) =>
      seq(
        field("name", $.identifier),
        seq(
          "=",
          field(
            "value",
            choice(
              $.preprocessor_macro_expansion,
              $.conditional_preprocessing,
              $.embedded_code,
              $.literal
            )
          )
        )
      ),

    array_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("wrapping_indicator", "%")),
        seq(
          "[",
          field(
            "size",
            choice(
              $.preprocessor_macro_expansion,
              $.conditional_preprocessing,
              $.embedded_code,
              $.script_argument_number,
              $.number
            )
          ),
          "]"
        )
      ),

    _statement: ($) =>
      choice(
        $.expression_statement,
        $.statement_block,
        $.null_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.foreach_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.next_statement,
        $.try_statement,
        $.delete_statement
      ),

    expression_statement: ($) => $._rvalue,

    statement_block: ($) =>
      prec.right(seq("{", repeat($._statement), "}")),

    null_statement: (_) => ";",

    if_statement: ($) =>
      prec.right(
        seq(
          $._if_clause,
          field("consequence", $._statement),
          optional(
            seq("else", field("alternative", $._statement))
          )
        )
      ),

    _if_clause: ($) =>
      seq("if", "(", field("condition", $._rvalue), ")"),

    while_statement: ($) =>
      seq(
        "while",
        seq("(", field("condition", $._rvalue), ")"),
        field("body", $._statement)
      ),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        field(
          "initialization",
          optional($.expression_statement)
        ),
        ";",
        field("condition", optional($.expression_statement)),
        ";",
        field("iteration", optional($.expression_statement)),
        ")",
        field("body", $._statement)
      ),

    foreach_statement: ($) =>
      seq(
        "foreach",
        "(",
        field("declarator", $.foreach_declarator),
        "in",
        field("array", $.foreach_array),
        optional(seq("limit", field("limit", $._rvalue))),
        ")",
        field("body", $._statement)
      ),

    _sorting_order: (_) =>
      field("sorting_order", choice("+", "-")),

    foreach_declarator: ($) =>
      choice(
        seq(
          field("key", $.identifier),
          optional($._sorting_order)
        ),
        seq(
          field("value", $.identifier),
          optional($._sorting_order),
          "=",
          field("key", $.identifier)
        ),
        field("key", $.tuple_capture),
        seq(
          field("value", $.identifier),
          optional($._sorting_order),
          "=",
          field("key", $.tuple_capture)
        )
      ),

    tuple_capture: ($) =>
      seq(
        "[",
        seqdel(
          ",",
          seq($.identifier, optional($._sorting_order))
        ),
        "]"
      ),

    foreach_array: ($) =>
      seq(
        field("array", $.identifier),
        optional(field("index", $.tuple_index)),
        optional(
          seq("@", field("aggregation_operator", $.identifier))
        ),
        optional($._sorting_order)
      ),

    tuple_index: ($) =>
      seq("[", seqdel(",", choice("*", $._rvalue)), "]"),

    break_statement: (_) => prec.left("break"),

    continue_statement: (_) => prec.left("continue"),

    try_statement: ($) =>
      seq(
        "try",
        field("body", $.statement_block),
        optional(field("handler", $.catch_clause))
      ),

    catch_clause: ($) =>
      seq(
        "catch",
        optional(
          seq("(", field("parameter", $.identifier), ")")
        ),
        field("body", $.statement_block)
      ),

    delete_statement: ($) =>
      prec.right(seq("delete", $._rvalue)),

    _rvalue: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.embedded_code,
        $._expression
      ),

    _expression: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        $.call_expression,
        $.context_variable_expansion,
        $.unary_expression,
        $.update_expression,
        $.binary_expression,
        $.array_in_expression,
        $.assignment_expression,
        $.ternary_expression,
        $.grouping_expression,
        $.literal,
        $.identifier
      ),

    subscript_expression: ($) =>
      prec(
        PREC.SUBSCRIPT,
        seq(
          field("argument", $._rvalue),
          field("index", $.tuple_index)
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $._expression),
          seq(
            "(",
            optional(seqdel(",", field("argument", $._rvalue))),
            ")"
          )
        )
      ),

    update_expression: ($) => {
      const argument = field("argument", $._rvalue);
      const operator = field("operator", choice("++", "--"));
      return prec.right(
        PREC.UNARY,
        choice(seq(operator, argument), seq(argument, operator))
      );
    },

    binary_expression: ($) => {
      const table = [
        ["!=", PREC.EQUAL],
        ["!~", PREC.EQUAL],
        ["%", PREC.MULTIPLICATION],
        ["&", PREC.BITWISE_AND],
        ["&&", PREC.LOGICAL_AND],
        ["*", PREC.MULTIPLICATION],
        ["+", PREC.ADDITION],
        ["-", PREC.ADDITION],
        [".", PREC.ADDITION],
        ["/", PREC.MULTIPLICATION],
        ["<", PREC.RELATIONAL],
        ["<<", PREC.BITWISE_SHIFT],
        ["<=", PREC.RELATIONAL],
        ["==", PREC.EQUAL],
        ["=~", PREC.EQUAL],
        [">", PREC.RELATIONAL],
        [">=", PREC.RELATIONAL],
        [">>", PREC.BITWISE_SHIFT],
        ["^", PREC.EXCLUSIVE_OR],
        ["|", PREC.INCLUSIVE_OR],
        ["||", PREC.LOGICAL_OR],
      ];

      return choice(
        ...table.map(([operator, precedence]) => {
          return prec.left(
            precedence,
            seq(
              field("left", $._rvalue),
              field("operator", operator),
              field("right", $._rvalue)
            )
          );
        })
      );
    },

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $._lvalue),
          field(
            "operator",
            choice(
              "%=",
              "&=",
              "*=",
              "+=",
              "-=",
              ".=",
              "/=",
              "<<=",
              "<<<",
              "=",
              ">>=",
              "^=",
              "|="
            )
          ),
          field("right", $._rvalue)
        )
      ),

    _lvalue: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.identifier,
        $.subscript_expression,
        $.member_expression
      ),

    literal: ($) =>
      choice(
        $.concatenated_string,
        $.string,
        $.script_argument_string,
        $.script_argument_number,
        $.number
      ),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, "/*")),
            token.immediate(prec(1, /[^\\"\n]+/)),
            $.escape_sequence
          )
        ),
        '"'
      ),

    script_argument_string: (_) => /[@](#|[1-9][0-9]?)/,

    script_argument_number: (_) => /[$](#|[1-9][0-9]?)/,

    number: (_) => {
      const oct_literal = seq("0", repeat(/[0-7]/));
      const dec_literal = seq(/[1-9]/, repeat(/[0-9]/));
      const hex_literal = seq(
        choice("0X", "0x"),
        repeat1(/[0-9A-Fa-f]/)
      );
      return token(
        choice(oct_literal, dec_literal, hex_literal)
      );
    },

    identifier: (_) => /[$A-Z_a-z][$0-9A-Z_a-z]*/,
